FIX: Wrong font weight changed

--- a/ChuloBoard/src/css/Docs/_Docs.sass
+++ b/ChuloBoard/src/css/Docs/_Docs.sass
@@ -19,7 +19,7 @@
             .feature
                 margin-bottom: 20px
                 color: #fff
-                font-weight: lighter
+                font-weight: 300
                 .feature-title
                     margin-bottom: 10px
                 .feature-usage
