--- a/ChuloBoard/src/css/app.sass
+++ b/ChuloBoard/src/css/app.sass
@@ -23,7 +23,7 @@
 @font-face
     font-family: "Roboto"
     src: url("../assets/fonts/Roboto-Light.woff") format("woff"), url("../assets/fonts/Roboto-Light.ttf") format("truetype")
-    font-weight: lighter
+    font-weight: 300
     font-display: swap
 
 *
